Added Responsiveness in header, nav, footer, image size

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsiveStyle.css">
 </head>
 
 <body>
@@ -22,6 +23,13 @@
                     <li>New</li>
                     <li>My List</li>
                 </ul>
+            </div>
+            <div class="tog-cnt">
+                <div class="toggle-btn">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
             <div class="menu">
                 <ul>
@@ -67,6 +75,7 @@
     <!-- Middle section for all the shows and movie recommendations -->
     <section class="middle">
         <div class="See-again">
+            
             <img src="assets/Top10Badge.png" alt="top-ten badge" id="top10">
             <div class="images">
                 <img src="assets/Tile Component-1.png" alt="Snow Piercer">
